prevent line breaks in header content on mobile

--- a/express/styles/styles.css
+++ b/express/styles/styles.css
@@ -104,7 +104,7 @@ body {
 }
 
 body[data-device="mobile"] {
-  h1, h2 {
+  h1, h2, h3, h4, h5, h6 {
     hyphens: none;
     overflow-wrap: break-word; 
     word-wrap: break-word;     
